# Ferret

./: Cargo.toml
git-tracker/: Cargo.toml
git-tracker/src/: branch.rs  error.rs  identity.rs  lib.rs  relocator.rs  scanner.rs  snapshot.rs  watcher.rs  worktree.rs
src/: error.rs  lib.rs  main.rs  pathutil.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: add.rs  config.rs  doctor.rs  goto.rs  init.rs  list.rs  mod.rs  pull.rs  push.rs  refresh.rs  remove.rs  repo.rs  scan.rs
src/config/: file.rs  mod.rs
src/git/: commit.rs  diff.rs  mod.rs  remote.rs  status.rs
src/language/: aliases.rs  cache.rs  detector.rs  mod.rs
src/navigation/: browser.rs  editor.rs  explorer.rs  mod.rs  shell.rs
src/registry/: entry.rs  manager.rs  mod.rs  storage.rs
