[workspace]
members = [
    ".",
    "git-tracker",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
chrono      = { version = "0.4", features = ["serde"] }
git2        = "0.18"
git-tracker = { path = "git-tracker" }

[package]
name = "ferret"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that simplifies working with many git repositories"

[dependencies]
clap        = { version = "4", features = ["derive"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = "0.8"
git2        = { workspace = true }
chrono      = { workspace = true }
directories = "5"
open        = "5"
thiserror   = { workspace = true }
ignore      = "0.4"
git-tracker = { workspace = true }
