[package]
name        = "git-tracker"
version     = "0.1.0"
edition     = "2021"
description = "Fast git repository detection, move tracking, and worktree awareness"

[dependencies]
# Workspace-shared
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
git2       = { workspace = true }

# File-system watching (cross-platform)
notify     = { version = "6", features = ["serde"] }

# Fast parallel directory traversal
walkdir    = "2"
rayon      = "1"

# Tiny hash for fingerprinting repo identity
blake3     = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile  = "3"
